Async run from notebook

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "import subprocess\n",
     "from pathlib import Path, PosixPath\n",
     "from typing import Iterable\n",
+    "import asyncio\n",
     "\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.export import Config, find_default_export, nbglob, read_nb\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,14 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def format_arg(arg, param_meta, returned_params):\n",
+    "def format_arg(arg, param_meta):\n",
     "    if arg in param_meta and not param_meta[arg].has_metaflow_param:\n",
     "        result = arg\n",
     "    else:\n",
@@ -481,7 +482,6 @@
     "\n",
     "\n",
     "def write_steps(flow_file, steps, orig_step_names, param_meta, single_indent):\n",
-    "    returned_params = []\n",
     "    for i, step in enumerate(steps):\n",
     "        flow_file.write(f\"{single_indent}@step\\n\")\n",
     "        flow_file.write(f\"{single_indent}def {step.name}(self):\\n\")\n",
@@ -493,7 +493,7 @@
     "            if len(step.args) > 0:\n",
     "                flow_step_args = \", \".join(\n",
     "                    [\n",
-    "                        format_arg(a, param_meta, returned_params)\n",
+    "                        format_arg(a, param_meta)\n",
     "                        for a in step.args.split(\",\")\n",
     "                    ]\n",
     "                )\n",
@@ -503,13 +503,9 @@
     "                )\n",
     "            else:\n",
     "                if step.return_stmt in param_meta:\n",
-    "                    print(returned_params)\n",
-    "                    print(param_meta)\n",
     "                    raise ValueError(\n",
     "                        f\"[{os.path.basename(flow_file.name)}] step return variable {step.return_stmt} shadows a parameter name - parameters must be unique\"\n",
     "                    )\n",
-    "                # print(step.return_stmt)\n",
-    "                # returned_params.append(step.return_stmt)\n",
     "                flow_file.write(\n",
     "                    f\"{single_indent}{single_indent}results = {orig_step_names[i]}({flow_step_args})\\n\"\n",
     "                )\n",
@@ -528,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +561,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_flow_path(nb_path):\n",
+    "    return Path(\n",
+    "        os.path.join(Config().path(\"flows_path\"), \n",
+    "        f\"{get_module_name(nb_path).split('.')[-1]}.py\",\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(Path('/home/jovyan/git/sciflow/nbs/test/flows/test_data_handling.py') == get_flows_path(nb_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,34 +798,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def check_flow(flows_dir, flow_module, flow_command=\"show\"):\n",
+    "def check_flow(flows_dir, flow_module, flow_command=\"show\", params=None):\n",
     "    prep_mf_env()\n",
-    "    script = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command}\"\n",
+    "    if params:\n",
+    "        args = ' '.join([f'--{p[0]} {p[1]}' for p in params])\n",
+    "        script = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command} {args}\"\n",
+    "    else:\n",
+    "        script = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command}\"\n",
     "    pipe, output = run_shell_cmd(script)\n",
     "    return pipe.returncode, output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [('speed', 'fast'), ('traffic_percent', 10)]\n",
+    "assert('--speed fast --traffic_percent 10' == ' '.join([f'--{p[0]} {p[1]}' for p in params]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flow: test_module.py verified\n",
-      "Flow: test_clustering_no_params.py verified\n",
-      "Flow: test_clustering.py verified\n",
-      "Flow: test_data_handling.py verified\n",
-      "Flow: test_export.py verified\n"
+      "Flow: test_module.py show verified\n",
+      "Flow: test_clustering_no_params.py show verified\n",
+      "Flow: test_clustering.py show verified\n",
+      "Flow: test_data_handling.py show verified\n",
+      "Flow: test_export.py show verified\n"
      ]
     }
    ],
@@ -816,17 +849,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flow: test_module.py verified\n",
-      "Flow: test_clustering.py verified\n",
-      "Flow: test_data_handling.py verified\n",
-      "Flow: test_export.py verified\n"
+      "Flow: test_module.py --no-pylint run verified\n",
+      "Flow: test_clustering.py --no-pylint run verified\n",
+      "Flow: test_data_handling.py --no-pylint run verified\n",
+      "Flow: test_export.py --no-pylint run verified\n"
      ]
     }
    ],
@@ -838,7 +871,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_flow(flow_path, params=None):\n",
+    "    print(f'Running flow: {os.path.basename(flow_path)}')\n",
+    "    return check_flow(flow_path.parent, os.path.basename(flow_path), flow_command=\"--no-pylint run\", params=params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running flow: test_clustering.py\n",
+      "Metaflow 2.2.7 executing TestClusteringFlow for user:e02079\n",
+      "Validating your flow...\n",
+      "    The graph looks good!\n",
+      "2021-04-21 16:31:18.545 Workflow starting (run-id 1619022678541832):\n",
+      "2021-04-21 16:31:18.549 [1619022678541832/start/1 (pid 14778)] Task is starting.\n",
+      "2021-04-21 16:31:20.810 [1619022678541832/start/1 (pid 14778)] Task finished successfully.\n",
+      "2021-04-21 16:31:20.817 [1619022678541832/preprocess/2 (pid 14793)] Task is starting.\n",
+      "2021-04-21 16:31:49.716 [1619022678541832/preprocess/2 (pid 14793)] Task finished successfully.\n",
+      "2021-04-21 16:31:49.723 [1619022678541832/fit/3 (pid 14830)] Task is starting.\n",
+      "2021-04-21 16:31:52.031 [1619022678541832/fit/3 (pid 14830)] Task finished successfully.\n",
+      "2021-04-21 16:31:52.038 [1619022678541832/evaluate/4 (pid 14845)] Task is starting.\n",
+      "2021-04-21 16:31:54.194 [1619022678541832/evaluate/4 (pid 14845)] Task finished successfully.\n",
+      "2021-04-21 16:31:54.201 [1619022678541832/end/5 (pid 14860)] Task is starting.\n",
+      "2021-04-21 16:31:56.202 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Running command 'track_flow'\n",
+      "2021-04-21 16:31:56.631 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Started run with ID \"25\"\n",
+      "2021-04-21 16:31:56.799 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Completed after 0:00:01\n",
+      "2021-04-21 16:31:57.395 [1619022678541832/end/5 (pid 14860)] Task finished successfully.\n",
+      "2021-04-21 16:31:57.396 Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ret_code, output = run_flow(Path('/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py'), \n",
+    "         params=[('traffic_percent', 10), ('speed', 'fast')]\n",
+    "        )\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def run_flow_task(flow_path, params=None):\n",
+    "    flows_dir = flow_path.parent\n",
+    "    flow_module = os.path.basename(flow_path)\n",
+    "    flow_command=\"--no-pylint run\"\n",
+    "    prep_mf_env()\n",
+    "    if params:\n",
+    "        args = ' '.join([f'--{p[0]} {p[1]}' for p in params])\n",
+    "        cmd = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command} {args}\"\n",
+    "    else:\n",
+    "        cmd = f\"python '{os.path.join(flows_dir, flow_module)}' {flow_command}\"\n",
+    "    proc = await asyncio.create_subprocess_shell(\n",
+    "        cmd,\n",
+    "        stdout=asyncio.subprocess.PIPE,\n",
+    "        stderr=asyncio.subprocess.PIPE)\n",
+    "\n",
+    "    stdout, stderr = await proc.communicate()\n",
+    "\n",
+    "    print(f'[{cmd!r} exited with {proc.returncode}]')\n",
+    "    if stdout:\n",
+    "        print(f'[stdout]\\n{stdout.decode(\"utf-8\").strip()}')\n",
+    "    if stderr:\n",
+    "        print(f'[stderr]\\n{stderr.decode(\"utf-8\").strip()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_flow_async(nb_path, params=None):\n",
+    "    flow_path = get_flow_path(nb_path)\n",
+    "    loop = asyncio.get_event_loop()\n",
+    "    task = loop.create_task(run_flow_task(flow_path, params))\n",
+    "    return task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task = run_flow_async('/home/jovyan/git/sciflow/nbs/test/test_clustering.ipynb',\n",
+    "                     params=[('traffic_percent', 10), ('speed', 'fast')])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Task pending coro=<run_flow_task() running at <ipython-input-310-acf846e28e3e>:16> wait_for=<_GatheringFuture pending cb=[<TaskWakeupMethWrapper object at 0x7f68e9847390>()]>>"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,6 +1018,13 @@
     "def sciflow_run_flows():\n",
     "    check_flows(Config(), \"--no-pylint run\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -870,6 +1032,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
