Asyc result returned

--- a/nbs/metaflow.ipynb
+++ b/nbs/metaflow.ipynb
@@ -871,18 +871,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_flow(flow_path, params=None):\n",
+    "# export\n",
+    "\n",
+    "def run_flow(nb_path, params=None):\n",
+    "    flow_path = get_flow_path(nb_path)\n",
     "    print(f'Running flow: {os.path.basename(flow_path)}')\n",
     "    return check_flow(flow_path.parent, os.path.basename(flow_path), flow_command=\"--no-pylint run\", params=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -893,38 +896,86 @@
       "Metaflow 2.2.7 executing TestClusteringFlow for user:e02079\n",
       "Validating your flow...\n",
       "    The graph looks good!\n",
-      "2021-04-21 16:31:18.545 Workflow starting (run-id 1619022678541832):\n",
-      "2021-04-21 16:31:18.549 [1619022678541832/start/1 (pid 14778)] Task is starting.\n",
-      "2021-04-21 16:31:20.810 [1619022678541832/start/1 (pid 14778)] Task finished successfully.\n",
-      "2021-04-21 16:31:20.817 [1619022678541832/preprocess/2 (pid 14793)] Task is starting.\n",
-      "2021-04-21 16:31:49.716 [1619022678541832/preprocess/2 (pid 14793)] Task finished successfully.\n",
-      "2021-04-21 16:31:49.723 [1619022678541832/fit/3 (pid 14830)] Task is starting.\n",
-      "2021-04-21 16:31:52.031 [1619022678541832/fit/3 (pid 14830)] Task finished successfully.\n",
-      "2021-04-21 16:31:52.038 [1619022678541832/evaluate/4 (pid 14845)] Task is starting.\n",
-      "2021-04-21 16:31:54.194 [1619022678541832/evaluate/4 (pid 14845)] Task finished successfully.\n",
-      "2021-04-21 16:31:54.201 [1619022678541832/end/5 (pid 14860)] Task is starting.\n",
-      "2021-04-21 16:31:56.202 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Running command 'track_flow'\n",
-      "2021-04-21 16:31:56.631 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Started run with ID \"25\"\n",
-      "2021-04-21 16:31:56.799 [1619022678541832/end/5 (pid 14860)] INFO:test_clustering:Completed after 0:00:01\n",
-      "2021-04-21 16:31:57.395 [1619022678541832/end/5 (pid 14860)] Task finished successfully.\n",
-      "2021-04-21 16:31:57.396 Done!\n"
+      "2021-04-21 16:35:38.863 Workflow starting (run-id 1619022938859736):\n",
+      "2021-04-21 16:35:38.867 [1619022938859736/start/1 (pid 15137)] Task is starting.\n",
+      "2021-04-21 16:35:41.020 [1619022938859736/start/1 (pid 15137)] Task finished successfully.\n",
+      "2021-04-21 16:35:41.026 [1619022938859736/preprocess/2 (pid 15156)] Task is starting.\n",
+      "2021-04-21 16:36:10.333 [1619022938859736/preprocess/2 (pid 15156)] Task finished successfully.\n",
+      "2021-04-21 16:36:10.340 [1619022938859736/fit/3 (pid 15189)] Task is starting.\n",
+      "2021-04-21 16:36:12.480 [1619022938859736/fit/3 (pid 15189)] Task finished successfully.\n",
+      "2021-04-21 16:36:12.487 [1619022938859736/evaluate/4 (pid 15204)] Task is starting.\n",
+      "2021-04-21 16:36:14.619 [1619022938859736/evaluate/4 (pid 15204)] Task finished successfully.\n",
+      "2021-04-21 16:36:14.626 [1619022938859736/end/5 (pid 15219)] Task is starting.\n",
+      "2021-04-21 16:36:16.581 [1619022938859736/end/5 (pid 15219)] INFO:test_clustering:Running command 'track_flow'\n",
+      "2021-04-21 16:36:16.977 [1619022938859736/end/5 (pid 15219)] INFO:test_clustering:Started run with ID \"28\"\n",
+      "2021-04-21 16:36:17.224 [1619022938859736/end/5 (pid 15219)] INFO:test_clustering:Completed after 0:00:01\n",
+      "2021-04-21 16:36:17.691 [1619022938859736/end/5 (pid 15219)] Task finished successfully.\n",
+      "2021-04-21 16:36:17.692 Done!\n"
      ]
     }
    ],
    "source": [
-    "ret_code, output = run_flow(Path('/home/jovyan/git/sciflow/nbs/test/flows/test_clustering.py'), \n",
+    "# slow\n",
+    "\n",
+    "ret_code, output = run_flow(Path('/home/jovyan/git/sciflow/nbs/test/test_clustering.ipynb'), \n",
     "         params=[('traffic_percent', 10), ('speed', 'fast')]\n",
     "        )\n",
+    "assert(ret_code == 0)\n",
     "print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1151"
+      ]
+     },
+     "execution_count": 354,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output.find(\"Started run with ID \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'28'"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "experiment_id = [s.strip('\"') for s in re.search('Started run with ID \"\\d+\"', output).group(0).split('ID ')][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "async def run_flow_task(flow_path, params=None):\n",
+    "    experiment_id = None\n",
     "    flows_dir = flow_path.parent\n",
     "    flow_module = os.path.basename(flow_path)\n",
     "    flow_command=\"--no-pylint run\"\n",
@@ -943,52 +994,79 @@
     "\n",
     "    print(f'[{cmd!r} exited with {proc.returncode}]')\n",
     "    if stdout:\n",
-    "        print(f'[stdout]\\n{stdout.decode(\"utf-8\").strip()}')\n",
+    "        output = stdout.decode(\"utf-8\").strip()\n",
+    "        experiment_id = [s.strip('\"') for s in re.search('Started run with ID \"\\d+\"', output).group(0).split('ID ')][1]\n",
+    "        print(f'[stdout]\\n{output}')\n",
     "    if stderr:\n",
-    "        print(f'[stderr]\\n{stderr.decode(\"utf-8\").strip()}')"
+    "        print(f'[stderr]\\n{stderr.decode(\"utf-8\").strip()}')\n",
+    "        \n",
+    "    return experiment_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
     "def run_flow_async(nb_path, params=None):\n",
     "    flow_path = get_flow_path(nb_path)\n",
     "    loop = asyncio.get_event_loop()\n",
     "    task = loop.create_task(run_flow_task(flow_path, params))\n",
+    "    task.add_done_callback(lambda x: print(f'Task {x.result()} finished'))\n",
     "    return task"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = run_flow_async('/home/jovyan/git/sciflow/nbs/test/test_clustering.ipynb',\n",
+    "task = run_flow_async(os.path.join(\"test\", \"test_clustering.ipynb\"),\n",
     "                     params=[('traffic_percent', 10), ('speed', 'fast')])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Task pending coro=<run_flow_task() running at <ipython-input-310-acf846e28e3e>:16> wait_for=<_GatheringFuture pending cb=[<TaskWakeupMethWrapper object at 0x7f68e9847390>()]>>"
+       "True"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "task"
+    "task.done()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'32'"
+      ]
+     },
+     "execution_count": 389,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "task.result()"
    ]
   },
   {
