--- a/nbs/lake_experiment_loader.ipynb
+++ b/nbs/lake_experiment_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -41,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,18 +41,20 @@
     "from typing import Tuple\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from incense.artifact import CSVArtifact\n",
     "from incense.experiment import Experiment\n",
     "from sciflow.utils import load_dremio_access\n",
     "from text_discovery.lake_experiment import LakeExperiment\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
-    "from turbodbc.exceptions import DatabaseError"
+    "from turbodbc.exceptions import DatabaseError\n",
+    "from nbdev import Config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,39 +63,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dremio_access = load_dremio_access()\n",
-    "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
-    "project_dir = \"discovery/experiments/test\"\n",
-    "experiments_dir = \"discovery/experiments/test\"\n",
-    "experiment_name = \"lake_observer\"\n",
-    "table_context = '\"chatbot_unpublish_s3\".discovery.experiments.test'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
-    "class LakeExperimentLoader:\n",
+    "class LakeExpLoader:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        dremio_access,\n",
-    "        table_context,\n",
-    "        bucket_name,\n",
-    "        experiments_dir,\n",
     "        experiment_name,\n",
+    "        experiments_key_prefix = None,\n",
+    "        dremio_access = None,\n",
+    "        bucket_name = None,\n",
+    "        bucket_table_alias = None\n",
     "    ):\n",
-    "        self.dremio_access = dremio_access\n",
-    "        self.table_context = table_context\n",
-    "        self.bucket_name = bucket_name\n",
-    "        self.experiments_dir = experiments_dir\n",
+    "        config = Config()\n",
+    "        lib_name = config.lib_name\n",
     "        self.experiment_name = experiment_name\n",
+    "        self.dremio_access = load_dremio_access() if not dremio_access else dremio_access\n",
+    "        self.bucket_name = config.bucket if not bucket_name else bucket_name\n",
+    "        self.bucket_table_alias = config.bucket_table_alias if not bucket_table_alias else bucket_table_alias\n",
+    "        self.experiments_key_prefix = f'{lib_name}/experiments' if not experiments_key_prefix else experiments_key_prefix\n",
+    "        table_path = self.experiments_key_prefix.replace('/', '.')\n",
+    "        self.table_context = f'{self.bucket_table_alias}.{table_path}'\n",
+    "        self.remote_path = f'{self.bucket_name}/{self.experiments_key_prefix}/{self.experiment_name}'\n",
+    "        self.lake_table = f'{self.table_context}.{self.experiment_name}'\n",
     "\n",
     "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def _find(\n",
@@ -129,7 +114,7 @@
     "        experiments = [\n",
     "            LakeExperiment(\n",
     "                self.bucket_name,\n",
-    "                self.experiments_dir,\n",
+    "                self.experiments_key_prefix,\n",
     "                experiment_name,\n",
     "                ex_id,\n",
     "                data.iloc[i, :].to_dict(),\n",
@@ -195,23 +180,140 @@
     "        self.find_by_id.cache_clear()\n",
     "        self.find_by_ids.cache_clear()\n",
     "        self.find_by_name.cache_clear()\n",
-    "        self.find_latest.cache_clear()"
+    "        self.find_latest.cache_clear()\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return f'Experiment: {self.experiment_name}\\n' \\\n",
+    "                f'Remote Path: {self.remote_path}\\n' \\\n",
+    "                f'Lake Table: {self.lake_table}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = LakeExperimentLoader(\n",
-    "    dremio_access, table_context, bucket_name, experiments_dir, experiment_name\n",
+    "dremio_access = load_dremio_access() # default - load it\n",
+    "bucket_name = \"s3bawspprwe1chatbotunpub01\" # default = bucket\n",
+    "bucket_table_alias = 'chatbot_unpublish_s3'\n",
+    "experiments_key_prefix = \"discovery/experiments/test\" # default = lib_name/experiments\n",
+    "experiment_name = \"lake_observer\" # default should be flow name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = LakeExpLoader(\n",
+    "    experiment_name, experiments_key_prefix, dremio_access, bucket_name, bucket_table_alias \n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment: lake_observer\n",
+       "Remote Path: s3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer\n",
+       "Lake Table: chatbot_unpublish_s3.discovery.experiments.test.lake_observer"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(loader.remote_path == 's3bawspprwe1chatbotunpub01/discovery/experiments/test/lake_observer')\n",
+    "assert(loader.lake_table == 'chatbot_unpublish_s3.discovery.experiments.test.lake_observer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_loader = LakeExpLoader(\n",
+    "    f'generated_experiment_name_{np.random.randint(10**5)}'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment: generated_experiment_name_74285\n",
+       "Remote Path: pprsandboxpdlras3/sciflow/experiments/generated_experiment_name_74285\n",
+       "Lake Table: ra_s3.sciflow.experiments.generated_experiment_name_74285"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR IS: `ODBC error\n",
+      "state: HY000\n",
+      "native error code: 1040\n",
+      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from ra_s3.sciflow.experiments.generated_experiment_name_74285.runs\n",
+      "[30038]Query execution error. Details:[ \n",
+      "VALIDATION ERROR: Table 'ra_s3.sciflow.experiments.generated_experiment_name_74285.runs' not found\n",
+      "\n",
+      "SQL Query select * from ra_s3.sciflow.experiments.generated_experiment_name_74285.runs\n",
+      "startLine 1\n",
+      "startColumn 15\n",
+      "endLine 1\n",
+      "endColumn 19\n",
+      "\n",
+      "[Error Id: 57217...[see log]`\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    missing_loader.find_all()\n",
+    "    # TODO clean up error messaging\n",
+    "except DatabaseError:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +369,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 9.3 µs\n"
+      "Wall time: 10.5 µs\n"
      ]
     }
    ],
@@ -277,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 184 ms, sys: 40 ms, total: 224 ms\n",
-      "Wall time: 1.45 s\n"
+      "CPU times: user 304 ms, sys: 24 ms, total: 328 ms\n",
+      "Wall time: 1.42 s\n"
      ]
     }
    ],
@@ -304,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -314,17 +416,17 @@
       "ERROR IS: `ODBC error\n",
       "state: HY000\n",
       "native error code: 1040\n",
-      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from \"chatbot_unpublish_s3\".discovery.experiments.test.laketest.runs\n",
+      "message: [Dremio][Connector] (1040) Dremio failed to execute the query: select * from chatbot_unpublish_s3.discovery.experiments.test.laketest.runs\n",
       "[30038]Query execution error. Details:[ \n",
       "VALIDATION ERROR: Table 'chatbot_unpublish_s3.discovery.experiments.test.laketest.runs' not found\n",
       "\n",
-      "SQL Query select * from \"chatbot_unpublish_s3\".discovery.experiments.test.laketest.runs\n",
+      "SQL Query select * from chatbot_unpublish_s3.discovery.experiments.test.laketest.runs\n",
       "startLine 1\n",
       "startColumn 15\n",
       "endLine 1\n",
-      "endColumn 36\n",
+      "endColumn 34\n",
       "\n",
-      "[Error Id: a09f...[see log]`\n",
+      "[Error Id: 985c6288...[see log]`\n",
       "Table not found\n"
      ]
     }
@@ -338,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +473,18 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
